# report-cruncher

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  run.sh
ECTSum-GPT3/: README.md  fine-tune-GPT3.ipynb  generate_temp_data_gpt3_bert.py  gpt3-response-fs_Alphabet.txt  prepare_data_gpt3_bert.py  prepared_val.jsonl  run-summary-completion-GPT3.ipynb
ECTSum-GPT3/data-bert/: test.json  test_files.txt  train_files.txt  val.json  val_files.txt
ECTSum-GPT3/data-exp/: fs_Alphabet.txt
ECTSum-GPT3/data-exp/temp/: exp.json  exp_files.txt
report-cruncher-client/: .env.example  README.md  package-lock.json  package.json
report-cruncher-client/src/: App.test.tsx  App.tsx  index.tsx
report-cruncher-client/src/ThemeProvider/: ThemeProvider.component.tsx  theme.ts
report-cruncher-client/src/constants/: environment.ts
report-cruncher-client/src/store/: notification.effects.ts  notificationSlice.ts  store.ts  store.types.ts  user.effects.ts  user.service.ts  user.slice.ts  user.types.ts
report-cruncher-client/src/styles/: appStyles.tsx
report-cruncher-client/src/utils/: localStorageUtils.ts  requestUtils.ts  waitUtil.ts
report_cruncher/: constants.py  wsgi.py
report_cruncher/config/: logger.py  monitoring.py
report_cruncher/handler/: chat_handler.py  chat_handler_old.py  dataloader_handler.py  search_handler.py
report_cruncher/helper/: api_types.py  embed_text.py  pdf_reader.py
report_cruncher/openai/: embed_text.py
report_cruncher/reader/: pdf_reader.py
report_cruncher/service/: redis.py
(+25 files in other folders)
